[package]
edition = "2021"
name = "atem-connection-image-tools"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Enable napi feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.16.9", default-features = false, features = ["napi8"] }
napi-derive = "2.16.11"

[build-dependencies]
napi-build = "2.1.3"

[profile.release]
lto = true
